1999-11-14  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* lib/about.cc (populate): Change the signal data to this.

	* NEWS: Updated.

	* configure.in: Move po/Makefile.in at the last in AC_OUTPUT.
	(ALL_LINGUAS): Rename ja to ja.eucjp.

	* bin/main.cc (class clock_app): Add member ad.
	(describe): Use member ad instead of local object.

	* lib/about.cc (handle_ok): Replace call of quit using close.
	* lib/options.cc (handle_ok, handle_cancel): Likewise.

	* lib/modaldialog.cc (take_action, close, add, create_window,
 	destroy_window): New functions.
	(quit): Removed.
	(act): Use create_window.  Check if window is visible.
	(handle_delete_event): Close as a negative action.
	(~modal_dialog): Use destroy_window.

	* include/utils.h (class modal_dialog): Add members struct
 	action_callback, negative_action, positive_action,
 	action_callbacks, add, take_action, close, create_window,
 	destroy_window, and populate.  Remove quit.  Rename member widget
 	to window.

	* lib/modaldialog.cc (deliver_delete_event): New function.
	(act): Use deliver_delete_event.

	* include/utils.h (class modal_dialog): Make handle_delete_event
 	non-static.

	* lib/Makefile.am (libutils_a_SOURCES): Add modal_dialog.cc.

	* lib/options.cc: Move modal_dialog methods to modaldialog.cc.

	* lib/modaldialog.cc: New file.

	* include/utils.h (class modal_dialog): Add comments.

	* lib/options.cc (act): Remove use of func_data.
	(handle_delete_event, handle_ok, handle_cancel): Remove use of
 	to_ptr.
	(populate): Remove use of func_data and add.

	* lib/about.cc (create_widget): Remove use of add.
	(handle_ok): Remove use of to_ptr.

	* include/utils.h (class modal_dialog): Remove base class.

	* include/utils.h (class modal_dialog): Add member widget and
 	constructor and destructor.

	* lib/options.cc (act): Use member widget and avoid gtk_main.
	(quit): Just hide the widget.
	(~modal_dialog): New function.  Destroy the widget.
	(modal_dialog): Construct with no widget.
